--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel='stylesheet' href='style.css'>
 </head>
 <body>
-    <script src='script.js'></script>
+    <script src='/src/script.js'></script>
 
 
     <div id='winPage'>
