--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel='stylesheet' href='style.css'>
 </head>
 <body>
+    <h1>Tower of Hanoi</h1>
+
     <script src='script.js'></script>
 
 
@@ -32,8 +34,8 @@
     <div id='end' class='stage' ondrop='drop(event)' ondragover='allowDrop(event)'>
         <div class='rod' id='5'></div>
         </div>
-
-
-
-</body>
+    <div classname=restartbutton>
+        <button classname="restart" onClick="window.location.reload();">Restart!</button>
+    </div>
+    </body>
 </html>
