--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Tower of Hanoi</h1>
-
+    <p>Directions: Grab a disc and try to stack them, in order by height, on the right most tower.<p>
     <script src='script.js'></script>
 
 
